src/tests/testfiles/function-declarations/15.txt
testfiles/function-declarations/15.c:2:5: error: incompatible conversion returning 'int' from a function with return type 'const int * * * * * const * * * * * const *'
return 0;
^
